src/index.scss
@import "./styles/vbucks.scss";

@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap");

@property --darker-color {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}

@property --lighter-color {
  syntax: "<color>";
  inherits: true;
  initial-value: transparent;
}

@property --image-opacity {
  syntax: "<number>";
  inherits: true;
  initial-value: 0;
}

@property --image-lighter-step {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 0%;
}

* {
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;

  font-family: "Roboto Condensed";
  font-size: 16px;
  color: #111827;

  background-color: #e5e7eb;
}

.shop {
  min-height: 100%;
  width: fit-content;

  display: flex;
  flex-direction: column;

  row-gap: 2rem;

  padding: 2rem;
  margin: 0;

  & > .title {
    font-size: 2.2rem;
    line-height: 2.2rem;

    transform: translateX(2rem);

    &:not(:first-child) {
      margin-top: 2rem;
    }
  }

  .section {
    width: fit-content;

    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;

    gap: 1rem;

    .panel {
      flex-shrink: 0;

      display: grid;
      grid-template-rows: repeat(2, 1fr);

      gap: 1rem;

      &.bundle[data-children="1"] {
        grid-template-columns: repeat(2, 1fr);
      }

      &.items {
        grid-auto-flow: column;

        &[data-children="3"],
        &[data-children="4"] {
          grid-template-columns: repeat(2, 1fr);
        }

        &[data-children="5"],
        &[data-children="6"] {
          grid-template-columns: repeat(3, 1fr);
        }

        &[data-children="7"],
        &[data-children="8"] {
          grid-template-columns: repeat(4, 1fr);
        }
      }

      .card {
        --image-width: 16rem;
        --image-height: 24rem;

        --darker-color: #6b7280;
        --lighter-color: #d1d5db;

        --image-lighter-step: 0%;

        height: var(--card-height);

        display: flex;
        flex-direction: column;

        border-radius: calc(1rem + 2px);
        background-color: white;
        border: 3px solid white;
        box-shadow: 0 2px 5px #d1d5db;

        padding: 0 0 0.5rem;

        transition: 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
        transition-property: --darker-color, --lighter-color, --image-opacity,
          --image-lighter-step;

        &:hover {
          --image-lighter-step: 10%;
        }

        &.small {
          --card-height: calc((28rem / 2) - 1rem);

          & > .image {
            --gradient-shape: ellipse;

            &,
            &::before {
              background-size: contain;
            }
          }
        }

        &:not(.small) {
          --card-height: 28rem;

          grid-row: 1 / 3;
        }

        &.double {
          --image-width: calc(16rem * 2 + 1rem + 6px);

          grid-column: span 2;

          & > .image {
            background-size: 150%;

            &::before {
              background-size: 100%;
            }
          }
        }

        .image {
          --gradient-shape: circle;

          position: relative;
          overflow: hidden;

          height: var(--image-height);
          width: var(--image-width);

          background-image: radial-gradient(
            var(--gradient-shape) at 25% 0,
            var(--lighter-color) var(--image-lighter-step),
            var(--darker-color)
          );
          box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);

          border-radius: 1rem;

          &,
          &::before {
            background-size: 150%;
            background-position: top center;
            background-repeat: no-repeat;
          }

          &::before {
            content: " ";
            position: absolute;

            width: 100%;
            height: 100%;

            background-image: var(--image);
            background-size: 150%;

            opacity: var(--image-opacity);
            filter: drop-shadow(2.5px 2.5px 5px rgba(0, 0, 0, 0.1));

            transition-delay: 0.3s;
            transition-duration: 1s;
          }
        }

        .name,
        .rarity {
          display: inline-flex;

          font-weight: 700;

          padding: 0.4rem 1rem;
        }

        .rarity {
          position: absolute;

          font-size: 1rem;
          letter-spacing: 0.05rem;
          color: #fff;

          background-image: linear-gradient(to top, #374151, #6b7280);
          border-radius: 1rem 0;
          box-shadow: 0 0 0 3px #fff, 2.5px 2.5px 5px rgba(0, 0, 0, 0.2);

          padding-bottom: 0.2rem;
        }

        .middle {
          text-align: center;

          transform: translateY(-2rem);
        }

        .name {
          position: relative;

          background-image: linear-gradient(
            to bottom,
            rgba(255, 255, 255, 0.5),
            #fff 67%
          );
          backdrop-filter: blur(5px);
          border-radius: 1rem 1rem 0 0;
          box-shadow: 0 -4px 5px rgba(0, 0, 0, 0.15);

          font-size: 1.3rem;
          color: var(--darker-color);
          text-shadow: 0 0 5px #fff, 0 0 10px #fff;

          &::before,
          &::after {
            content: " ";

            width: 1rem;
            height: 1rem;

            position: absolute;
            bottom: 0;

            background: transparent;
            border-radius: 100rem;
          }

          &::before {
            left: 0;

            box-shadow: 0.5rem 0.5rem #fff;

            transform: translate(-100%, -6px);
          }

          &::after {
            right: 0;

            box-shadow: -0.5rem 0.5rem #fff;

            transform: translate(100%, -6px);
          }
        }

        .bottom {
          display: flex;
          justify-content: space-between;

          line-height: 1.6rem;

          padding: 0 1rem;
          transform: translateY(calc(-0.7rem - 1px));

          .price {
            background-image: $vbucks-image;
            background-size: 25px;
            background-repeat: no-repeat;
            background-position: 0 0px;

            font-weight: 700;
            color: #51727d;

            padding-left: 1.7rem;
            padding-top: 1px;

            del {
              position: relative;

              text-decoration: none;

              margin-right: 0.25rem;

              &::after {
                content: " ";

                position: absolute;
                left: 0;

                width: 100%;
                height: 2px;

                background: #ef4444;

                transform: scaleX(1.1) translate(1px, 0.7rem) rotate(-10deg);
              }
            }
          }

          .ago {
            padding-top: 1px;

            &.new {
              font-weight: 700;
              color: var(--darker-color);
              text-transform: uppercase;
            }
          }
        }
      }
    }
  }
}

